syntax = "proto3";

package greetpb;
option go_package="github.com/Yapcheekian/grpc-practice/greet/greetpb;greetpb";

message Greeting {
    string first_name = 1;
    string last_name = 2;
}

message GreetRequest {
    Greeting greeting = 1;
}

message GreetReponse {
    string result = 1;
}

service GreetService{
    // Unary
    rpc Greet(GreetRequest) returns (GreetReponse) {};
}
